# fake-socket

./: CMakeLists.txt  README.md  fake-socket-config.cmake
.github/workflows/: cmake-single-platform.yml
cmake/: fake-socketConfig.cmake.in
include/: CMakeLists.txt
include/fs/: fake_socket.h  fs_base.h
lib/: CMakeLists.txt  fake_socket.c  fs_accept_backlog.c  fs_accept_backlog.h  fs_core.c  fs_core.h  fs_listen_table.c  fs_listen_table.h  fs_mem.c  fs_mem.h  fs_mutex.c  fs_mutex.h  fs_port_table.c  fs_port_table.h  fs_socket_object.c  fs_socket_object.h  fs_stream.c  fs_stream.h  fs_trace.c  fs_trace.h
test/: CMakeLists.txt  main.c  test.h  test_core.c  test_server.c  test_stream.c
